# python-project-52

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  ruff.toml
.github/workflows/: delete-workflows.yml  delete.yml  django-test.yml  django.yml  render.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  settings.py  test_db.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_crud.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_crud.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_tasktolabel_task_label.py  0004_rename_label_task_labels.py
task_manager/tasks/tests/: test_crud.py  test_filter.py
task_manager/templates/: base_layout.html  form.html  header.html  index.html  layout.html  login.html
task_manager/templates/labels/: delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  filter.html  index.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_crud.py
task_manager/users/tests/fixtures/: user.json
