[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "black>=25.1.0",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "flake8>=7.2.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.7",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.4",
]

[tool.black]
line-length = 120
