[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "task_manager" }]

dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2.4",
    "django-bootstrap5>=25.1",
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.7",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
