[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic==1.13.1",
    "argcomplete==3.5.3",
    "asgiref==3.8.1",
    "attrs==23.2.1.dev0",
    "autocommand==2.2.2",
    "babel==2.15.0",
    "bcrypt==4.2.1",
    "black>=25.1.0",
    "blinker==1.8.2",
    "brotli==1.1.0",
    "btrfsutil==6.13",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==44.0.2",
    "dbus-python==1.3.2",
    "decorator==5.1.1",
    "distro==1.9.0",
    "dj-database-url>=2.3.0",
    "django==5.1.7",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "flake8>=7.2.0",
    "flask==3.1.0",
    "flask-babel==4.0.0",
    "flask-compress==1.14",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-mailman==1.0.0",
    "flask-migrate==4.0.7",
    "flask-paranoid==0.3.0",
    "flask-principal==0.4.0",
    "flask-security==5.5.2",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "greenlet==3.1.1",
    "gssapi==1.9.0",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "inflect==7.5.0",
    "itsdangerous==2.1.2",
    "jaraco-collections==5.1.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jaraco-text==4.0.0",
    "jinja2==3.1.5",
    "ldap3==2.9",
    "lensfun==0.3.4",
    "libfdt==1.7.2",
    "mako==1.3.9.dev0",
    "markupsafe==2.1.5",
    "more-itertools==10.6.0",
    "msgpack==1.0.5",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "paramiko==3.5.0",
    "passlib==1.7.4",
    "pipx==1.7.1",
    "platformdirs==4.3.6",
    "psutil==7.0.0",
    "psycopg2==2.9.9",
    "psycopg2-binary>=2.9.10",
    "pwquality==1.4.5",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pygame==2.6.1",
    "pygobject==3.50.0",
    "pylint>=3.3.7",
    "pynacl==1.5.0",
    "pynvim==0.5.2",
    "pyqt5==5.15.11",
    "pyqt5-sip==12.17.0",
    "python-dateutil==2.9.0",
    "python-dotenv==1.1.0",
    "pytz==2025.1",
    "rollbar>=1.3.0",
    "ruff>=0.11.4",
    "setuptools==75.8.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "speaklater==1.3",
    "sqlparse==0.5.1",
    "sshtunnel==0.4.0",
    "testtools==2.7.2",
    "tomli==2.0.1",
    "trove-classifiers==2025.3.3.18",
    "typeguard==4.4.2",
    "typing-extensions==4.12.2",
    "userpath==1.9.2",
    "validate-pyproject==0.23.post1.dev0+gf45606b.d20250111",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "wheel==0.45.0",
    "whitenoise[brotli]>=6.9.0",
    "wtforms==3.2.1",
    "zipp==3.21.0",
]

[tool.black]
line-length = 120
skip-string-normalization = true
